objects/ssot__BenefitAssignmentAdjustment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitAsgntAdjApprovalStatus__c</fullName>
        <label>Benefit Asgnt Adj Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAsgntAdjProcessingStatus__c</fullName>
        <label>Benefit Asgnt Adj Processing Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentAdjType__c</fullName>
        <label>Benefit Assignment Adj Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitAssignmentId__c</fullName>
        <label>Benefit Assignment</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Assignment Adjustment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurringAmount__c</fullName>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291819143_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitAssignmentAdjustment_BenefitA_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>BenefitAssignmentAdjustment_BenefitA_rel</relationshipLabel>
        <relationshipName>rel_1720291819143_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>